Handle CSS layout issue.

--- a/src/main-page/main-page.less
+++ b/src/main-page/main-page.less
@@ -31,7 +31,7 @@
   .menus {
     list-style-type: none;
     padding: 0;
-    margin: 15px;
+    margin: 10px;
 
     li {
       display: inline;
@@ -47,10 +47,11 @@
         text-decoration: none;
         color: black;
         font-family: Consolas;
-        font-size: 14px;
+        font-size: 15px;
         user-select: none;
         margin: -10px;
         padding: 0 10px;
+        line-height: 35px;
       }
     }
 
